--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     background: linear-gradient(to top, #f77802
-    , #f1bc89);
+    , #f3c498);
 }
 
 .clock {
@@ -20,5 +20,6 @@ body {
     width: 500px;
     height: 500px;
     border-radius: 250px;
-    border: 10px solid #111;
+    border: 7px solid #111;
+    background-color: #e9e7e7;
 }
